# GCU6th_Team_Introduction

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.claude/: settings.json
.github/workflows/: cli-e2e.yml
app/: __init__.py  dependencies.py  main.py  schemas.py
app/api/: boards.py  health.py  issues.py  webhooks.py
app/repositories/: supabase_client.py
assets/css/: base.css  landing.css
assets/js/: landing.js
docs/: CLI_E2E_RESULT.latest.md  CLI_E2E_RESULT.md  DATABASE.md  E2E_TEST_PLAN_CLI.md  PERFORMANCE_AUDIT.md  PRD.md  PRD_CLI.md  SECURITY_AUDIT.md  TDD_CLI_PLAN.md  TEST_CASE.md  TEST_CASE_CLI.md  TSD.md  TSD_CLI.md
pages/: about.html  chaeu.html  code.html  contact.html
public/chaewoo/: base.css  chaeu.html  index.html  landing.css  landing.js
public/yujeong/: style.css
scripts/: kanban_auto_hook.py  kanban_sync_lib.sh  kanban_task_done.sh  kanban_task_fail.sh  kanban_task_start.sh  kanban_task_update.sh  record_agent_mistake.py  run_cli_e2e.sh
src/: App.jsx  index.css  main.jsx
src/components/: MemberPhoto.jsx  TopBar.jsx  WonjunPokemonIntro.css  WonjunPokemonIntro.jsx
src/content/: chaewooContent.js  jaebinHeroContent.js  members.js
src/hooks/: usePeelAnimation.js
src/pages/: AboutPage.jsx  ChaewooPage.jsx  CodePage.jsx  (+5 more)
supabase_sql/: 04_api_keys.sql
tests/: test_cli.py  test_health_and_boards.py
ttodo_cli/: __init__.py  client.py  config.py  main.py
yujeong/: index.html  script.js  style.css
(+10 files in other folders)
