[project]
name = "kanban-cli"
version = "0.2.3"
description = "CLI for Kanban Backend POC API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1",
  "typer>=0.16.0",
]

[project.scripts]
kanban = "ttodo_cli.main:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ttodo_cli"]
